:art: refactor code